# Chess_Exam_Lab_Program

./: .gitignore  CMakeLists.txt  Create_Piece.cpp  Create_Piece.h  Draw_board.cpp  Draw_board.h  Es13.cpp  Es13.h  Handle_Chessboard.cpp  Handle_Chessboard.h  Handle_Fen_String.cpp  Handle_Fen_String.h  Handle_Mouse_Input.cpp  Handle_Mouse_Input.h  Move.cpp  Move.h  Movement_Handler.cpp  Movement_Handler.h  Movement_Piece.cpp  Movement_Piece.h  MyApp.cpp  MyApp.h  PROBLEMI.TXT  da_fare.txt
Piece_factory/: Piece.cpp  Piece.h
Piece_factory/Bishop/: Bishop.cpp  Bishop.h
Piece_factory/King/: King.cpp  King.h
Piece_factory/Knight/: Knight.cpp  Knight.h
Piece_factory/Pawn/: Pawn.cpp  Pawn.h
Piece_factory/Queen/: Queen.cpp  Queen.h
Piece_factory/Rock/: Rock.cpp  Rock.h
Test/: CMakeLists.txt  Move_Test.cpp
start/: MyProjectBase.cpp  MyProjectBase.h
